overflow body hidden, need bugfix

--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@ body {
   height: 100%;
   padding: 0px;
   overflow-x: hidden;
+  overflow: hidden;
 }
 
 .body-s {
